--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -27,15 +27,11 @@ jobs:
           echo "hdftest:tmppasswd" | chpasswd
       - name: test
         run: |
-          sudo -u hdftest cd /home/hdftest
-          sudo -u hdftest module load mpi/openmpi-x86_64
-          sudo -u hdftest mkdir build
-          sudo -u hdftest cd build
-          sudo -u cmake -DSITE:STRING="fed" -DBUILDNAME:STRING="6/f/p/hl" \
+	  chown -R hdftest .
+          sudo -u hdftest bash -c 'source /etc/profile.d/modules.sh && load mpi/openmpi-x86_64 && mkdir build && cd build && cmake -DSITE:STRING="fed" -DBUILDNAME:STRING="6/f/p/hl" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
-          ..
-          sudo -u hdftest ctest -D Experimental -C Release
+          .. && ctest -D Experimental -C Release'
