--- a/.github/workflows/fed.yml
+++ b/.github/workflows/fed.yml
@@ -28,7 +28,7 @@ jobs:
       - name: test
         run: |
           chown -R hdftest .
-          sudo -u hdftest bash -c 'source /etc/profile.d/modules.sh && load mpi/openmpi-x86_64 && mkdir build && cd build && cmake -DSITE:STRING="fed" -DBUILDNAME:STRING="6/f/p/hl" \
+          sudo -u hdftest bash -c 'source /etc/profile.d/modules.sh && module load mpi/openmpi-x86_64 && mkdir build && cd build && cmake -DSITE:STRING="fed" -DBUILDNAME:STRING="6/f/p/hl" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
