--- a/.github/workflows/arm64-win.yml
+++ b/.github/workflows/arm64-win.yml
@@ -3,10 +3,10 @@ name: arm64 win
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-latest-arm
     steps:
       - name: get
         uses: actions/checkout@v4
