ci(arm64,win-25): test arm

--- a/.github/workflows/arm64-win.yml
+++ b/.github/workflows/arm64-win.yml
@@ -6,7 +6,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: windows-latest-arm
+    runs-on: windows-2025
     steps:
       - name: get
         uses: actions/checkout@v4
@@ -16,5 +16,5 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -A ARM64 -DSITE:STRING=win.arm64 -DBUILDNAME:STRING="r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          cmake -A ARM64 -DSITE:STRING="win-25.arm64" -DBUILDNAME:STRING="r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+          ctest -D Experimental -C Debug
