--- a/.github/workflows/arm64-win-axl.yml
+++ b/.github/workflows/arm64-win-axl.yml
@@ -17,5 +17,8 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -A ARM64 -DSITE:STRING="win-25.arm64" -DBUILDNAME:STRING="pr5285/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Debug
+          cmake -A ARM64 -DCMAKE_BUILD_TYPE:STRING=Debug -DBUILD_SHARED_LIBS:BOOL=OFF -DBUILD_TESTING:BOOL=ON -DHDF5_BUILD_TOOLS:BOOL=ON ..
+          cmake --build . --config Debug
+          ctest -C Debug -j4	  
+#          cmake -A ARM64 -DSITE:STRING="win-25.arm64" -DBUILDNAME:STRING="pr5285/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+#          ctest -D Experimental -C Debug
