--- a/.github/workflows/arm64-win.yml
+++ b/.github/workflows/arm64-win.yml
@@ -18,7 +18,7 @@ jobs:
           mkdir build
           cd build
           cmake -A ARM64 -DSITE:STRING="win-25.arm64" -DBUILDNAME:STRING="d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
-          cmake --build . --config Debug
+          ctest -C Debug -T Build
           ctest -C Debug -T Test
           ctest -C Debug -T Submit	  
 #          ctest -D Experimental -C Debug
