--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -2,7 +2,7 @@ name: arm64
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -19,7 +19,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+        with:
+          repository: byrnHDF/hdf5
+          ref: develop-rem-autotools
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
         env:
@@ -33,13 +35,11 @@ jobs:
           shell: bash
           run: |
             sudo pkg_add git
-            git clone https://github.com/HDFGroup/hdf5
-            cd hdf5
             sudo pkg_add cmake
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="r" \
+            -DBUILDNAME:STRING="pr5308/r" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
