--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     strategy:
       matrix:
         gcc_version: ['9', '10', '11', '12', '13', '14']
@@ -43,6 +43,6 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DSITE:STRING=ubu \
+            -DSITE:STRING="ubu.arm64" \
             ..
           ctest -D Experimental
