--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -16,7 +16,10 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: HDFGroup/hdf4      
-
+    - name: Install sudo
+      run: |
+        su -c 'apt-get update'
+        su -c 'apt-get install -y sudo'
     - name: Setup experimental repository
       run: |
         echo "deb http://deb.debian.org/debian experimental main" | sudo tee -a /etc/apt/sources.list
