--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -2,9 +2,9 @@ name: Test on Debian Experimental
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
   pull_request:
-    branches: [ main ]
+    branches: [ main- ]
 
 jobs:
   test-on-debian-experimental:
