--- a/.github/workflows/gcc-15.yml
+++ b/.github/workflows/gcc-15.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Install GCC
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/ppa
           sudo apt update
+          sudo apt search gcc-15
           sudo apt install -y gcc-15 g++-15
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-15 15 --slave /usr/bin/g++ g++ /usr/bin/g++-15
           gcc --version
