--- a/.github/workflows/gcc-15.yml
+++ b/.github/workflows/gcc-15.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           repository: HDFGroup/hdf5
 
-      - name: Install GCC
+      - name: Install Deps
         run: |
           sudo apt-get updat
           sudo apt-get install -y software-properties-common
@@ -30,6 +30,7 @@ jobs:
             m4 \
             flex \
             bison
+      - name: Install GCC
           mkdir src
           cd src
           git clone --depth 1 --branch master git://gcc.gnu.org/git/gcc.git gcc-15.0
