--- a/.github/workflows/gcc-15.yml
+++ b/.github/workflows/gcc-15.yml
@@ -31,6 +31,7 @@ jobs:
             flex \
             bison
       - name: Install GCC
+        run: |
           mkdir src
           cd src
           git clone --depth 1 --branch master git://gcc.gnu.org/git/gcc.git gcc-15.0
@@ -39,17 +40,7 @@ jobs:
           cd ..
           mkdir build
           cd build
-          ../gcc-15.0/configure -v \
-  --enable-checking=release \
-  --enable-shared \
-  --enable-threads=posix \
-  --enable-__cxa_atexit \
-  --enable-clocale=gnu \
-  --enable-languages=c,c++ \
-  --disable-multilib \
-  --bindir=/usr/bin \
-  --prefix=/usr/local/gcc-15.0 \
-  --program-suffix=-15
+          ../gcc-15.0/configure -v  --enable-checking=release   --enable-shared \ --enable-threads=posix   --enable-__cxa_atexit   --enable-clocale=gnu \ --enable-languages=c,c++   --disable-multilib   --bindir=/usr/bin   --prefix=/usr/local/gcc-15.0   --program-suffix=-15
           make -j
           sudo make install-strip
           sudo echo /usr/local/gcc-15.0/lib64 > /etc/ld.so.conf.d/gcc-15.0.conf
