--- a/.github/workflows/gcc-15.yml
+++ b/.github/workflows/gcc-15.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Install Deps
         run: |
-          sudo apt-get updat
+          sudo apt-get update
           sudo apt-get install -y software-properties-common
           sudo apt-get update
           sudo apt-get install -y \
