--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -2,15 +2,15 @@ name: Test on Debian Experimental
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   pull_request:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test-on-debian-experimental:
     runs-on: ubuntu-latest
     container:
-      image: debian:latest
+      image: debian:bookworm
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
