--- a/.github/workflows/synology.yml
+++ b/.github/workflows/synology.yml
@@ -11,6 +11,10 @@ jobs:
       - name: test
         shell: bash
         run: |
+          git clone https://github.com/SynologyOpenSource/ExamplePackages
           git clone https://github.com/SynologyOpenSource/pkgscripts-ng
           cd pkgscripts-ng
           sudo ./EnvDeploy -v 7.2 -p alpine
+          cp -r ../ExamplePackages/ExamplePackages .
+          ./PkgCreate.py -v 7.2 -p alpine -c ExamplePackages
+          ls ../result_spk
