--- a/.github/workflows/synology.yml
+++ b/.github/workflows/synology.yml
@@ -15,6 +15,6 @@ jobs:
           git clone https://github.com/SynologyOpenSource/pkgscripts-ng
           cd pkgscripts-ng
           sudo ./EnvDeploy -v 7.2 -p alpine
-          cp -r ../ExamplePackages/ExamplePackages .
-          ./PkgCreate.py -v 7.2 -p alpine -c ExamplePackages
+          cp -r ../ExamplePackages/ExamplePackage .
+          ./PkgCreate.py -v 7.2 -p alpine -c ExamplePackage
           ls ../result_spk
