--- a/.github/workflows/synology.yml
+++ b/.github/workflows/synology.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ExamplePackage-1.0.0-0001.zip
-          path: /home/runner/work/actions/actions/result_spk/ExamplePackage-1.0.0-0001
+          path: ./result_spk/ExamplePackage-1.0.0-0001
