--- a/.github/workflows/synology.yml
+++ b/.github/workflows/synology.yml
@@ -22,5 +22,5 @@ jobs:
       - name: upload
         uses: actions/upload-artifact@v4
         with:
-          name: ExamplePackage-1.0.0-0001.zip
+          name: ExamplePackage-1.0.0-0001
           path: ./result_spk/ExamplePackage-1.0.0-0001
