--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -1,27 +1,22 @@
-name: spack h5z-zfp%oneapi
+name: spack hdf5@1.14.5-mpi
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   pull_request:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
     - name: Checkout spack
       uses: actions/checkout@v4
       with:
         repository: spack/spack
         path: ./spack      
-    - name: Run spack install h5z-zfp
+    - name: spack
       run: |
         . ./spack/share/spack/setup-env.sh
-        spack install intel-oneapi-compilers@2023.2.1
-        spack compiler add `spack location -i intel-oneapi-compilers`/compiler/latest/linux/bin/intel64
-        spack compiler add `spack location -i intel-oneapi-compilers`/compiler/latest/linux/bin
-        spack compiler list
-        spack spec h5z-zfp%oneapi
-        spack install h5z-zfp%oneapi
+        spack spec -I hdf5@1.14.5 ~mpi
