--- a/.github/workflows/spack.yml
+++ b/.github/workflows/spack.yml
@@ -15,8 +15,9 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: spack/spack
-        path: ./spack      
+        path: ./spack
     - name: spack
       run: |
         . ./spack/share/spack/setup-env.sh
         spack spec -I hdf5@1.14.5~mpi
+        spack install hdf5@1.14.5~mpi
