--- a/.github/workflows/arm64-ndk.yml
+++ b/.github/workflows/arm64-ndk.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Setup Android Environment
         run: |
-          sudo apt install google-android-ndk-installer
+          curl -O -L  https://github.com/lzhiyong/termux-ndk/releases/download/android-ndk/android-ndk-r27b-aarch64.zip
+          unzip android-ndk-r27b-aarch64.zip
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -19,15 +20,15 @@ jobs:
 
       - name: test
         run: |
-          dir /usr/local/lib/android/sdk/ndk/
+          dir .
           mkdir build
           cd build
           cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID:BOOL=TRUE \
           -DANDROID_ABI=arm64-v8a \
-          -DBUILDNAME:STRING=pr4986/ndk27.0 \
+          -DBUILDNAME:STRING=ndk27.b \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=arm64-v8a \
           ..
-          ctest -D Experimental
+          ctest -T Build
