--- a/.github/workflows/arm64-ndk.yml
+++ b/.github/workflows/arm64-ndk.yml
@@ -22,8 +22,8 @@ jobs:
       - name: test
         run: |
           pwd
-          export ANDROID_SDK=${{ runner.workspace }}/android-ndk-r27b
-          echo RANDROID_SDK
+          export ANDROID_NDK=${{ runner.workspace }}/android-ndk-r27b
+          echo $ANDROID_NDK
           dir .
           mkdir build
           cd build
