--- a/.github/workflows/arm64-ndk.yml
+++ b/.github/workflows/arm64-ndk.yml
@@ -31,6 +31,7 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID:BOOL=TRUE \
           -DANDROID_ABI=arm64-v8a \
+          -DANDROID_PLATFORM=android-23 \
           -DBUILDNAME:STRING=ndk27.b \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=arm64-v8a \
