--- a/.github/workflows/arm64-ndk.yml
+++ b/.github/workflows/arm64-ndk.yml
@@ -9,6 +9,22 @@ jobs:
     runs-on: ubuntu-24.04-arm
     
     steps:
+      - name: install
+        run: |
+          apt-get update
+          apt-get install -y bison
+          apt-get install -y build-essential
+          apt-get install -y curl
+          apt-get install -y flex
+          apt-get install -y git
+          apt-get install -y make
+          apt-get install -y pbzip2
+          apt-get install -y python
+          apt-get install -y python-pip
+          apt-get install -y texinfo
+          apt-get install -y uuid-runtime
+          apt-get install -y zip
+          pip install setuptools      
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -18,9 +34,10 @@ jobs:
         run: |
           curl -O  -L https://storage.googleapis.com/git-repo-downloads/repo
           chmod a+x ./repo
-          mkdir working-directory-name 
-          cd working-directory-name 
+          mkdir ndk
+          cd ndk
           ../repo init -u https://android.googlesource.com/platform/manifest -b master-ndk --partial-clone
+          ./checkbuild.py
 
       - name: test
         run: |
