--- a/.github/workflows/arm64-ndk.yml
+++ b/.github/workflows/arm64-ndk.yml
@@ -11,19 +11,19 @@ jobs:
     steps:
       - name: install
         run: |
-          apt-get update
-          apt-get install -y bison
-          apt-get install -y build-essential
-          apt-get install -y curl
-          apt-get install -y flex
-          apt-get install -y git
-          apt-get install -y make
-          apt-get install -y pbzip2
-          apt-get install -y python
-          apt-get install -y python-pip
-          apt-get install -y texinfo
-          apt-get install -y uuid-runtime
-          apt-get install -y zip
+          sudo apt-get update
+          sudo apt-get install -y bison
+          sudo apt-get install -y build-essential
+          sudo apt-get install -y curl
+          sudo apt-get install -y flex
+          sudo apt-get install -y git
+          sudo apt-get install -y make
+          sudo apt-get install -y pbzip2
+          sudo apt-get install -y python
+          sudo apt-get install -y python-pip
+          sudo apt-get install -y texinfo
+          sudo apt-get install -y uuid-runtime
+          sudo apt-get install -y zip
           pip install setuptools      
       - name: Checkout
         uses: actions/checkout@v4
