--- a/.github/workflows/suse.yml
+++ b/.github/workflows/suse.yml
@@ -16,10 +16,11 @@ jobs:
           ref: hdf5_1_14_6
       - name: install
         run: |
+          zypper up
           zypper in -y \
               file gcc-fortran git \
-              make patch unzip which python3 python3-devel tree \
-              cmake bison bison-devel libstdc++-static \
+              make patch unzip which tree \
+              cmake bison libstdc++-static \
               openmpi openmpi-devel
       - name: Create a new user
         run: |
