--- a/.github/workflows/suse.yml
+++ b/.github/workflows/suse.yml
@@ -16,20 +16,15 @@ jobs:
           ref: hdf5_1_14_6
       - name: install
         run: |
-          zypper up
+          zypper up -y
           zypper in -y \
               file gcc-fortran git \
               make patch unzip which tree \
               cmake bison libstdc++-static \
               openmpi openmpi-devel
-      - name: Create a new user
-        run: |
-          useradd -m hdftest
-          echo "hdftest:tmppasswd" | chpasswd
       - name: test
         run: |
-          chown -R hdftest .
-          sudo -u hdftest bash -c 'source /etc/profile.d/modules.sh && module load mpi/openmpi-x86_64 && mkdir build && cd build && cmake -DSITE:STRING="suse-t" -DBUILDNAME:STRING="6/f/p/hl" \
+          mkdir build && cd build && cmake -DSITE:STRING="suse-t" -DBUILDNAME:STRING="6/f/p/hl" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
