--- a/.github/workflows/suse.yml
+++ b/.github/workflows/suse.yml
@@ -30,4 +30,4 @@ jobs:
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
-          .. && ctest -D Experimental -C Release'
+          .. && ctest -D Experimental -C Release
