ci(suse): user options

--- a/.github/workflows/suse.yml
+++ b/.github/workflows/suse.yml
@@ -30,4 +30,25 @@ jobs:
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DHDF5_BUILD_HL_LIB=ON \
+          -GNinja \
+	  -DCMAKE_INSTALL_PREFIX:PATH=/usr \
+	  -DCMAKE_INSTALL_BINDIR:PATH=bin \
+	  -DCMAKE_INSTALL_SBINDIR:PATH=sbin \
+	  -DCMAKE_INSTALL_LIBEXECDIR:PATH=libexec \
+	  -DCMAKE_INSTALL_SYSCONFDIR:PATH=etc \
+	  -DCMAKE_INSTALL_SHAREDSTATEDIR:PATH=/var/lib \
+	  -DCMAKE_INSTALL_LOCALSTATEDIR:PATH=var \
+	  -DCMAKE_INSTALL_RUNSTATEDIR:PATH=run \
+	  -DCMAKE_INSTALL_LIBDIR:PATH=lib64 \
+	  -DCMAKE_INSTALL_INCLUDEDIR:PATH=include \
+	  -DCMAKE_INSTALL_DATAROOTDIR:PATH=share \
+	  -DCMAKE_INSTALL_DOCDIR:PATH=share/doc/packages/hdf5 \
+	  -DCMAKE_INSTALL_MANDIR:PATH=share/man \
+	  -DCMAKE_INSTALL_INFODIR:PATH=share/info \
+	  -DINCLUDE_INSTALL_DIR:PATH=/usr/include \
+	  -DLIB_INSTALL_DIR:PATH=/usr/lib64 \
+	  -DSYSCONF_INSTALL_DIR:PATH=/etc \
+	  -DSHARE_INSTALL_PREFIX:PATH=/usr/share \
+	  -DCMAKE_BUILD_TYPE=RelWithDebInfo '-DCMAKE_C_FLAGS=-O2 -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3 -fstack-protector-strong -funwind-tables -fasynchronous-unwind-tables -fstack-clash-protection -Werror=return-type -flto=auto -g' '-DCMAKE_CXX_FLAGS=-O2 -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3 -fstack-protector-strong -funwind-tables -fasynchronous-unwind-tables -fstack-clash-protection -Werror=return-type -flto=auto -g' '-DCMAKE_Fortran_FLAGS=-O2 -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3 -fstack-protector-strong -funwind-tables -fasynchronous-unwind-tables -fstack-clash-protection -Werror=return-type -flto=auto -g' '-DCMAKE_EXE_LINKER_FLAGS=-flto=auto -Wl,--as-needed -Wl,--no-undefined -Wl,-z,now' '-DCMAKE_MODULE_LINKER_FLAGS=-flto=auto -Wl,--as-needed' '-DCMAKE_SHARED_LINKER_FLAGS=-flto=auto -Wl,--as-needed -Wl,--no-undefined -Wl,-z,now' -DLIB_SUFFIX=64 -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DBUILD_SHARED_LIBS:BOOL=ON -DBUILD_STATIC_LIBS:BOOL=OFF -DCMAKE_COLOR_MAKEFILE:BOOL=OFF -DCMAKE_INSTALL_DO_STRIP:BOOL=OFF -DCMAKE_MODULES_INSTALL_DIR=/usr/lib64/cmake/hdf5 -DCMAKE_C_COMPILER:FILEPATH=/usr/bin/cc -DCMAKE_CXX_COMPILER:FILEPATH=/usr/bin/c++ -DCMAKE_Fortran_COMPILER:FILEPATH=/usr/bin/gfortran -DCMAKE_SKIP_INSTALL_RPATH:BOOL=ON -DALLOW_UNSUPPORTED:BOOL=ON -DBUILD_STATIC_LIBS:BOOL=OFF -DBUILD_TESTING:BOOL=ON -DHDF5_BUILD_CPP_LIB:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_BUILD_HL_GIF_TOOLS:BOOL=OFF -DHDF5_BUILD_HL_LIB:BOOL=ON -DHDF5_BUILD_PARALLEL_TOOLS:BOOL=OFF -DHDF5_BUILD_TOOLS:BOOL=ON '-DHDF5_DISABLE_TESTS_REGEX:STRING=MPI_TEST_t_.*' -DHDF5_ENABLE_DEPRECATED_SYMBOLS:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=OFF -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_THREADSAFE:BOOL=ON -DHDF5_USE_GNU_DIRS:BOOL=ON
+	  
           .. && ctest -D Experimental -C Release
