ci(sus): add cpp

--- a/.github/workflows/suse.yml
+++ b/.github/workflows/suse.yml
@@ -1,4 +1,4 @@
-name: suse hdf5-1.14.6 f hl
+name: suse hdf5-1.14.6 f cpp hl
 
 on:
   push:
@@ -24,9 +24,10 @@ jobs:
               openmpi openmpi-devel
       - name: test
         run: |
-          mkdir build && cd build && cmake -DSITE:STRING="suse-t" -DBUILDNAME:STRING="6/f/hl" \
+          mkdir build && cd build && cmake -DSITE:STRING="sus-t" -DBUILDNAME:STRING="6/f/cpp/hl" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_BUILD_HL_LIB=ON \
+          -DHDF5_BUILD_CPP_LIB:BOOL=True \
           .. && ctest -D Experimental -C Release
