--- a/.github/workflows/lin-cnd.yml
+++ b/.github/workflows/lin-cnd.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        shell: bash -leo pipefail {0}
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -28,12 +31,9 @@ jobs:
           conda install -y conda-verify
           conda install -y anaconda-client
           conda-build .
+        continue-on-error: true	  
       - name: upload
         uses: actions/upload-artifact@v4
         with:
-          name: iowarp-0.0.0-py312_0.tar.bz2
-          path: /usr/share/miniconda/envs/test/conda-bld/linux-64/iowarp-0.0.0-py312_0.tar.bz2
-      - name: release
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: |
-          anaconda -t  "${{ secrets.ANACONDA_TOKEN }}" upload /usr/share/miniconda/envs/test/conda-bld/linux-64/iowarp-0.0.0-py312_0.tar.bz2
+          name: config-x64-linux-out.log
+          path: $SRC_DIR/vcpkg/buildtrees/cte-hermes-shm/config-x64-linux-out.log
